# vector-wine-shop-DevOps

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .coveragerc  Dockerfile  pyproject.toml
backend/src/: config.yaml
backend/src/tests/: conftest.py
backend/src/tests/mocks/: model_service.py  qdrant_service.py
backend/src/tests/services/: test_cart_service.py  test_chat_service.py
backend/src/tests/services/qdrant/: test_utils.py
backend/src/wines_rag/: app.py  config.py  errors.py
backend/src/wines_rag/api/: dependencies.py
backend/src/wines_rag/api/routes/: api.py  cart.py  chat.py
backend/src/wines_rag/api/schemas/: cart.py  chat.py
backend/src/wines_rag/entities/: qdrant.py
backend/src/wines_rag/services/: cart.py  chat.py  model.py
backend/src/wines_rag/services/qdrant/: client.py  utils.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  CartItem.test.tsx  CartPage.test.tsx  ChatPage.test.tsx  Composer.test.tsx  GlobalPageWrapper.test.tsx  Header.test.tsx  MessageBubble.test.tsx  api.test.ts  bulkCover.test.ts  composerUtils.test.ts  formatPrice.test.ts  main.test.tsx  useCart.test.tsx  useChat.test.ts  useComposer.test.ts
frontend/src/api/: api.ts  api.types.ts
frontend/src/assets/: fonts.css
frontend/src/components/GlobalPageWrapper/: GlobalPageWrapper.module.css  (+1 more)
qdrant/: load_wines.py  pyproject.toml
qdrant_loader/: Dockerfile  load_wines.py  wines.csv
(+18 files in other folders)
